remove symbols to please ros

--- a/nord/package.xml
+++ b/nord/package.xml
@@ -8,7 +8,7 @@
 
   <url>https://github.com/Jinxit/nordic-robotics</url>
 
-  <maintainer email="bened@@kth.se">Magnús Thór Benediktsson</maintainer>
+  <maintainer email="bened@kth.se">Magnus Thor Benediktsson</maintainer>
   <maintainer email="gsands@kth.se">Gustav Sandström</maintainer>
   <maintainer email="tolundi@kth.se">Tobias Lundin</maintainer>
   <maintainer email="lucasas@kth.se">Lucas Åström</maintainer>
